# circuit-artist

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  KNOWN_ISSUES.txt  README.md  deploy_here.sh  fix_demo_package.sh  parse_drawio.py  steam_appid.txt
.github/workflows/: build.yml
assets/: english.txt
assets/custom_levels/basics/: desc.txt  kernel.lua
assets/custom_levels/collatz/: desc.txt  kernel.lua  submitfw.lua
assets/custom_levels/gcd/: desc.txt  kernel.lua  submitfw.lua
assets/custom_levels/mof3/: combfw.lua  desc.txt  kernel.lua
assets/custom_levels/sandbox/: desc.txt  kernel.lua
assets/default_mod/: main.lua
assets/default_mod/levels/: basics1.lua  custom.lua  memory1.lua  routing1.lua
assets/default_mod/levels/kernels/: abarrel1.lua  amul2.lua  amul3.lua  amulb.lua  ashift1.lua  barrel2.lua  barrel32.lua  clbarrel1.lua  comparator1.lua  comparator2.lua  comparator3.lua  decoder2.lua  decoder_2bit.lua  funnel_shifter.lua  lbarrel1.lua  match7_or_23.lua  match_many.lua  mux_2_1.lua  nand.lua  nega.lua  or.lua  sandbox.lua  sevenseg.lua  subcypher.lua  xor.lua
assets/default_mod/locale/: en.lua
assets/default_mod/shared/: classic.lua  comb_level.lua  preload_chip.lua
assets/default_mod/wiki/: pages.lua
assets/files/: basics_campaign.lua  custom_campaign.lua  en.lua  main.lua  memory_campaign.lua  routing_campaign.lua  sevseg_campaign.lua  tut_mux.txt  tut_mux2.txt  tut_mux_larger.txt  tut_numbers.txt  wikis.lua
assets/files/campaigns/: basics1.lua  custom.lua  memory1.lua  routing1.lua  sevseg1.lua
assets/files/levels/: custom.lua  memory1.lua  routing1.lua  sevseg1.lua
assets/files/levels/desc/: a_eq_b1.txt  a_eq_b2.txt  adder4bit.txt  and.txt  barrel1.txt  barrel2.txt  comparator1.txt  comparator2.txt  comparator3.txt  decoder1.txt  decoder2.txt  decoder3.txt  demux.txt  mof3.txt  (+17 more)
assets/files/locale/: en.lua
assets/files/shared/: a.lua  comb_level.lua  preload_chip.lua
assets/files/wiki/: org.sh  pages.lua
assets/font/: ark-pixel-12px-monospaced-ja.bdf  ark-pixel-12px-monospaced-ko.bdf  ark-pixel-12px-monospaced-latin.bdf  ark-pixel-12px-monospaced-zh_cn.bdf  ark-pixel-12px-monospaced-zh_hk.bdf  ark-pixel-12px-monospaced-zh_tr.bdf  ark-pixel-12px-monospaced-zh_tw.bdf  ark-pixel-12px-proportional-ja.bdf  ark-pixel-12px-proportional-ko.bdf  ark-pixel-12px-proportional-latin.bdf  ark-pixel-12px-proportional-zh_cn.bdf  ark-pixel-12px-proportional-zh_hk.bdf  ark-pixel-12px-proportional-zh_tr.bdf  ark-pixel-12px-proportional-zh_tw.bdf
assets/imgs/: campbg.aseprite
assets/locale/: en.lua
assets/lua_shared/: _combinational_framework.lua  _submit_level.lua  classic.lua  var.lua
assets/shaders/: bkp_v2.glsl  bloom_combine_shader.glsl  clock_shader.glsl  comb_shader.glsl  distoutline_shader.glsl  fill_shader.glsl  gaussian_shader.glsl  graymode_shader.glsl  imgcode_shader.glsl  layergrayed_shader.glsl  layernoise_shader.glsl  layeronoff2_shader.glsl  layeronoff_shader.glsl  layerscreen_shader.glsl  layervv_shader.glsl  naive_bokeh_shader.glsl  nand2_frag.glsl  nand2_vert.glsl  nand4_frag.glsl  nand4_vert.glsl  nand_frag.glsl  nand_vert.glsl  nandact2_shader.glsl  nandact3_shader.glsl  nandact4_frag.glsl  nandact4_vert.glsl  nandact4err_frag.glsl  nandact4err_vert.glsl  nandact_shader.glsl  pattern_layers_shader.glsl  patternv2_layers_shader.glsl  pcomb_shader.glsl  pixel_error_frag.glsl  pixel_error_vert.glsl  project_pattern_shader.glsl  project_shader.glsl  project_with_dist_shader.glsl  projectdepth_shader.glsl  psave1.glsl  rotate_shader.glsl  (+21 more)
docs/: PHYSICS.md
examples/: example_multifile.lua  extra_funcs.lua  rewind_example1.lua  script_example1.lua  simple_clock.lua
examples/combinatorial/: 01_nand_gate.lua  02_not_gate.lua  03_and_gate.lua  04_decoder5.lua  05_mux_4_1.lua  _framework.lua  readme.txt
legacy_luasrc/: app.lua  level_component.lua  raylib_api.lua  tester.lua
legacy_luasrc/component_examples/: basic_rom.lua
legacy_luasrc/legacy_levels/: adder.lua  decoder.lua  nand.lua  xor.lua
legacy_luasrc/levels/: bus.lua  collatz.lua  hanoi.lua  primes.lua  riscv_alu.lua  simple_ram.lua
legacy_luasrc/template_scripts/: README.txt  example_custom_level.lua
legacy_luasrc/tutorial/: basic.lua  comparator.lua  decoder.lua  dflipflop.lua  mux.lua  negint.lua  not.lua  posint.lua  srlatch.lua  wire.lua
luasrc/: api.lua  app.lua  c_api.lua  camera.lua  clock.lua  level_component.lua  raylib_api.lua  tester.lua  textbox.lua  utils.lua
luasrc/component_examples/: basic_keyboard.lua  basic_ram.lua  basic_ram_display.lua
luasrc/ctpd/: addition.lua  and.lua  comparator.lua  decoder.lua  demux.lua  dflipflop.lua  dlatch.lua  init.lua  meminit.lua  mux.lua  nand.lua  negint.lua  not.lua  or.lua  posint.lua  propdelay.lua  shifter.lua  srlatch.lua  subtraction.lua  synchronous.lua  wire.lua  xor.lua
luasrc/imgs/levels/: door_lock_up.aseprite
luasrc/legacy_levels/: comparator.lua  nand.lua  shifter.lua  subtractor.lua  wires.lua
luasrc/levels/: adder.lua  and.lua  antenna.lua  bus.lua  camera.lua  collatz.lua  custom_components.lua  custom_components_example.lua  demux.lua  door.lua  gcd.lua  hanoi.lua  init.lua  mof3.lua  mux.lua  not.lua  or.lua  primes.lua  riscv_alu.lua  sandbox.lua  seven_seg.lua  simple_ram.lua  xor.lua
luasrc/template_scripts/: init.lua
luasrc/tutorial/: addition.lua  and.lua  demux.lua  dlatch.lua  init.lua  meminit.lua  nand.lua  or.lua  propdelay.lua  shifter.lua  subtraction.lua  synchronous.lua  tldr.lua  xor.lua
mods/helloworld/: krn_example.lua  main.lua
src/: .ycm_extra_conf.py  ;  api.c  api.h  api_web.c  asset_path.c  asset_path.h  blueprint.c  blueprint.h  brush.c  brush.h  buffer.c  buffer.h  clip_api.cpp  clip_api.h  clip_api_web.cpp  clipapi.cpp  clipapi.h  colors.c  colors.h  common.h  config.h  connected_components.c  connected_components.h  defs.h  discord_integration.cpp  discord_integration.h  dist_graph.c  dist_graph.h  elmore.c  elmore.h  event_queue.c  event_queue.h  filedialog.c  filedialog.h  filedialog_web.c  font.c  font.h  fs.cpp  fs.h  (+169 more)
(+94 files in other folders)
